fixed even(n) project alignment

--- a/app/routes/projectOverview/projectOverview.scss
+++ b/app/routes/projectOverview/projectOverview.scss
@@ -35,6 +35,6 @@
 	}
 
 	&:nth-child(even) {
-		margin: -10% 0 -10% -132%;
+		margin: -17% 0 -10% -135%;
 	}
 }
